Change the bootstrap danger color

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -2,6 +2,7 @@ $theme-colors: (
   'primary': #4cb4ee,
   'secondary': #1b1e2d,
   'dark': #161829,
+  'danger': #fd1532,
 );
 
 @import 'bootstrap/scss/bootstrap';
