Change the input color in AddCountryForm

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -3,6 +3,7 @@ $theme-colors: (
   'secondary': #1b1e2d,
   'dark': #161829,
   'danger': #fd1532,
+  'info': #40f2fe,
 );
 
 @import 'bootstrap/scss/bootstrap';
